# assassyn

./: .gitignore  Cargo.toml  Dockerfile  README.md  setup.sh
.github/workflows/: check-and-lint.yaml  test.yaml
docs/: debug.md  language.md
docs/developer/: README.md  format.md  git.md  github.md  tooling.md
eir/: Cargo.toml
eir/src/: test_utils.rs
examples/: priority_queue.sv
examples/binary_heap/: Cargo.toml
examples/conv_filter/: main.py
examples/conv_sum/: v1.py  v2.py
examples/fft/: fft.py
examples/memory_engine/: main.py  memory_engine_multidata.py  v2.py  (+1 more)
py-tests/: README.md  test_arbiter.py  test_array_multi_read.py  test_array_multi_write_in_same_module.py  test_array_partition0.py  test_array_partition1.py  test_async_call.py  test_async_call_v.py  test_bind.py  test_concat.py  test_cse.py  test_driver.py  test_dt_conv.py  test_eager_bind.py  test_explicit_pop.py  test_fib.py  test_fifo_valid.py  test_helloworld.py  test_imbalance.py  test_inline0.py  test_inline1.py  test_memory.py  test_multi_call.py  test_reg_init.py  test_select.py  test_wait_until.py
python/: .pylintrc  requirements.txt  setup.sh
src/: codegen.rs  frontend.rs  lib.rs  parser.rs
tests/: adder.rs  async_call.rs  back_pressure.rs  bind.rs  callback.rs  common_read.rs  data_type_conversion.rs  eager_bind.rs  explicit_pop.rs  fib.rs  fifo_valid.rs  helloworld.rs  inline.rs  memory.rs  module.rs  module_para.rs  multi_call.rs  reg_handle.rs  select.rs  spin_trigger.rs  spin_trigger_1.rs  systolic.rs  testbench.rs  tests.rs  trigger.rs
utils/: pre-commit  test.sh
(+277 files in other folders)
