[package]
name = "eda4eda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eir = { path = "./eir" }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"
